# GeisterEndgamePuzzle

./: ApiUploader.cpp  ApiUploader.h  Bitboard.cpp  Bitboard.h  CMakeLists.txt  CN.h  CsvParser.cpp  CsvParser.h  CsvToJson.cpp  CsvToJson.h  ExampleSolution.h  GeisterEndgamePuzzle.sln  GeisterEndgamePuzzle.vcxproj  GeisterEndgamePuzzle.vcxproj.filters  HashTable.h  IncludeLib.h  Node.h  Random.h  RandomGeneration.h  ReadMe.md  Search.h  answerGenerator.cpp  answerGenerator.h  answers.csv  main.cpp  normal-All.csv  normal-RedWall.csv  questions.csv  result.json  test.csv
GeisterPuzzleWeb/: index.html  package-lock.json  package.json  style.css
GeisterPuzzleWeb/app/: page.tsx
GeisterPuzzleWeb/v1-prototype/: index.html  script.js
normal/: n-1221-5_9ply-100-sd=0.txt  n-1221-5_9ply-200-sd=0.txt  n-1221-5_9ply-500-sd=0.txt
normal/1221/: 5.txt  7.txt
viewer_and_generated_puzzles/: allprob.csv
